--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -41,6 +41,7 @@ processResources {
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
+	options.compilerArgs.add("-XDignore.symbol.file");
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
